src/test/ui/associated-types/associated-types-no-suitable-supertrait-2.stderr
error[E0277]: the trait bound `Self: Get` is not satisfied
  --> $DIR/associated-types-no-suitable-supertrait-2.rs:17:5
   |
LL |     fn uhoh<U:Get>(&self, foo: U, bar: <Self as Get>::Value) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-^^
   |     |                                                       |
   |     |                                                       help: consider further restricting `Self`: `where Self: Get`
   |     the trait `Get` is not implemented for `Self`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
